# voicemeeter_tray_control

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appicon.rc
inc/: Tray.h  VoicemeeterApi.h  VolumeListener.h  WinAudio.h
src/: Tray.cpp  VoicemeeterApi.cpp  VolumeListener.cpp  WinAudio.cpp  main.cpp
